# document-search

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: code-quality.yml
.github/workflows/: code-quality.yml
document_search/: __init__.py  entities.py  types.py  utils.py
document_search/RAG/: retrievers.py  system_prompt.txt
document_search/app/: __init__.py  models.py  status_storage.py
document_search/frontend/: api.py  main.py
document_search/ocr/: __init__.py  doc_reader.py  doc_reader_interface.py  docx_doc_reader.py  entity_processor.py  exceptions.py  interfaces.py  markdown_reader.py  pdf_doc_reader.py  requirements.txt  text_corrector.py  txt_reader.py
document_search/rag/: __init__.py  credentials.py  prompt.py  retrievers.py
document_search/search/: __init__.py  embedders.py  interfaces.py
document_search/storages/: __init__.py  indexes.py  interfaces.py
frontend/: api.py
notebooks/: demo_ocr.ipynb  full_pipeline.ipynb  full_pipeline_rag.ipynb  run_tests.ipynb  test_backend.ipynb
tests/: test_embedders.py  test_indexes.py
